add id for full info proof